@@ -2,7 +2,8 @@ v1.3.0 (2018.08.xx)
   - Change internal channel identifier encoding to indicate tuner-direct only streams that cannot be accessed via an HDHomeRun RECORD engine
   - Fix bug causing "DVR stream read operation minimum size" to default to 1KiB instead of 4KiB if not explicitly set
   - Fix bug causing tuner-direct streams to improperly be reported to Kodi as zero length and not real-time
-
+  - Display notification when a live stream seek operation fails and attempt to recover the stream at the last known position
+  
 v1.2.10 (2018.07.28)
   - Update SQLite database engine to version 3.24.0
   - Refactor Live TV / Recorded TV stream implementation to eliminate use of the worker thread
